--- a/requirements.txt
+++ b/requirements.txt
@@ -1,29 +1,25 @@
-fastapi
+fastapi==0.104.0
 fugashi==1.3.0
-gitdb==4.0.10
-GitPython==3.1.34
-huggingface-hub==0.18.0
+gitdb==4.0.11
+GitPython==3.1.40
+huggingface-hub==0.17.3
 ipadic==1.0.0
-numpy==1.25.2
-pandas==2.1.0
-pydantic==2.2.1
-pydantic_core==2.6.1
+numpy==1.24.1
+pandas==2.1.2
+pydantic==2.4.2
+pydantic_core==2.10.1
 python-dateutil==2.8.2
-python-dotenv==1.0.0
 pytorch-lightning==1.7.7
-requests==2.31.0
-requests-oauthlib==1.3.1
-rsa==4.9
-scikit-learn==1.3.0
-scipy==1.11.2
+requests==2.28.1
+scikit-learn==1.3.2
+scipy==1.11.3
 sentencepiece==0.1.99
-streamlit==1.26.0
-tokenizers==0.13.3
-torch==2.1.0
+streamlit==1.28.0
+tokenizers==0.14.1
+torch==2.1.0+cu118
 torchmetrics==1.2.0
-transformers==4.23.1
+transformers==4.34.1
 uvicorn==0.23.2
-pickle
 csv
 os
 json
