--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ pandas==2.1.2
 pydantic==2.4.2
 pydantic_core==2.10.1
 python-dateutil==2.8.2
+Python==3.11.6
 pytorch-lightning==1.7.7
 requests==2.28.1
 scikit-learn==1.3.2
@@ -16,7 +17,7 @@ scipy==1.11.3
 sentencepiece==0.1.99
 streamlit==1.28.0
 tokenizers==0.14.1
-torch==2.1.0+cu118
+torch==2.1.0
 torchmetrics==1.2.0
 transformers==4.34.1
 uvicorn==0.23.2
